fix broken css

--- a/app/assets/stylesheets/components/confirm.scss
+++ b/app/assets/stylesheets/components/confirm.scss
@@ -4,7 +4,7 @@
     align-items: center;
     flex-direction: column;
     background: $form-background;
-    height: 1500px;
+    height: 90vh;
     // position: relative;
 
     .header{
